# ClangToolchain

./: .gitmodules  CMakeLists.txt  CMakePresets.json  HelloClang.cpp  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml
